2007-03-04 16:14  nick

	* panel/main.c, panel/panel-app.{c,h}: Fix problem with session management
	  and move the last lines of code from the 4_5_nick branch to trunk.

2007-03-03 21:00  nick

	* panel/*: Import all the code from my branch to trunk. Only the main.c
	  file is different in the branch because it contains a problem that
	  causes Xfce to start very slowly (the session manager).

2007-03-03 21:00  nick

	* Import my 4_5_nick branch into trunk:
	  - Completely rewritten launcher (Bugs 2336, 2365, 1323, 2262 and 1225)
	  - Various improvements in libxfce4panel (memory leaks, G_GNUC_INTERNAL,
	    GSList, canonical strings and fixed pedantic warnings).
	  - Libxfce4panel does no longer depend on libxfcegui4. This might cause
	    some problems with plugins. Plugin developers should add libxfcegui4
	    to the dependencies of their package (including cflags and libadd in
	    the makefiles).

2007-01-19 19:59  nick

	* NEWS: Update NEWS

2007-01-19 16:56  nick

	* ChangeLog, plugins/clock/clock.c,
	  plugins/windowlist/windowlist.c: Fix crash when moving the
	  plugin. Bug #2775.
	  Fix compiler warning.

2007-01-18 23:10  eulex

	* libexo/trunk/po/ChangeLog, libexo/trunk/po/sv.po,
	  libxfcegui4/trunk/po/ChangeLog, libxfcegui4/trunk/po/sv.po,
	  mousepad/trunk/po/ChangeLog, mousepad/trunk/po/sv.po,
	  thunar/trunk/po/ChangeLog, thunar/trunk/po/sv.po,
	  xfcalendar/trunk/po/ChangeLog, xfcalendar/trunk/po/sv.po,
	  xfce-mcs-plugins/trunk/po/ChangeLog,
	  xfce-mcs-plugins/trunk/po/sv.po, xfce-utils/trunk/po/ChangeLog,
	  xfce-utils/trunk/po/sv.po, xfce4-appfinder/trunk/po/ChangeLog,
	  xfce4-appfinder/trunk/po/sv.po, po/ChangeLog, po/sv.po,
	  xfdesktop/trunk/po/ChangeLog, xfdesktop/trunk/po/sv.po,
	  xfprint/trunk/po/ChangeLog, xfprint/trunk/po/sv.po,
	  xfwm4/trunk/po/ChangeLog, xfwm4/trunk/po/sv.po: Updated Swedish
	  translations for:
	  * libexo
	  * libxfcegui4
	  * mousepad
	  * thunar
	  * xfcalendar
	  * xfce4-appfinder
	  * xfce4-panel